# koma

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  build.spec  config.example.toml  pyproject.toml
.github/workflows/: build.yml
src/koma/: __init__.py  config.py  main.py  utils.py
src/koma/core/: __init__.py  archive.py  binder.py  command_generator.py  converter.py  deduplicator.py  image_processor.py  renamer.py  scanner.py
src/koma/resources/onnx/: mobilenet_v3_small_features.onnx
src/koma/ui/: __init__.py  app.py  base_tab.py  binder_frame.py  binder_tab.py  convert_tab.py  dedupe.py  dedupe_tab.py  dedupe_window.py  rename_tab.py  scan_tab.py  settings.py  utils.py
src/koma/utils/: __init__.py  ad_detector.py  archive.py  image_analysis.py  logger.py
tests/: conftest.py  test_archive.py  test_binder.py  test_cmd_gen.py  test_converter.py  test_deduplicator.py  test_image_processor.py  test_regex.py  test_renamer.py  test_scanner.py  test_utils.py
