[project]
name = "Koma"
version = "1.1.0"
description = "Manga Organization Toolbox."
readme = "README.md"
authors = [
    { name = "GrassSand", email = "grasssand@users.noreply.github.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["comic", "manga", "tool"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities"
]
dependencies = [
    "natsort>=8.4.0",
    "opencv-contrib-python-headless>=4.13.0.90",
    "pillow>=12.1.0",
    "send2trash>=2.1.0",
    "tkinterdnd2>=0.4.3",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.5",
    "pyinstaller>=6.18.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
]

[project.scripts]
koma = "koma.main:main"

[project.urls]
Homepage = "https://github.com/grasssand/koma"
Repository = "https://github.com/grasssand/koma"
"Bug Tracker" = "https://github.com/grasssand/koma/issues"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF", "T20"]
ignore = ["E501", "N802", "N806", "SIM105", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"build.spec" = ["F821", "E402"]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
addopts = "--cov=koma --color=yes --cov-report=term-missing --cov-report=html"
pythonpath = "src"
testpaths = "tests"

[tool.coverage.run]
omit = [
    "src/koma/main.py",
    "src/koma/utils.py",
    "src/koma/__init__.py",
    "src/koma/ui/*",
    "src/koma/utils/logger.py"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
